--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    h1{
+        font-family: anton, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 4.3rem;
+    }
+
+    h2{
+        font-family: anton, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 2.7rem; 
+    }
+}
