--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
         font-weight: 400;
         font-style: normal;
         font-size: 4.3rem;
+        color: white;
     }
 
     h2{
@@ -15,5 +16,15 @@
         font-weight: 400;
         font-style: normal;
         font-size: 2.7rem; 
+        color: white;
     }
+
+    p{
+        color: white;
+    }
+
+    body{
+        background-color: #2E2D2D;
+    }
+
 }
