--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,14 @@
         color: white;
     }
 
+    h3{
+        font-family: anton, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 1.6rem; 
+        color: white;
+    }
+
     p{
         color: white;
         font-family: 'Epilogue', sans-serif;
@@ -30,5 +38,6 @@
         background-color: #2E2D2D;
         
     }
+    .img:
 
 }
