--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@
         color: white;
         font-family: 'Epilogue', sans-serif;
         font-weight: 400;
+        line-height: 2.2;
 
     }
 
@@ -75,6 +76,7 @@
     }
   }
 
+      
   
   
 
